# neural-network-library

./: README.md  activation_functions.py  layers.py  loss_functions.py  network.py  pyproject.toml  synapse.py  tests.py
examples/: iris_example.py
src/neural_network_library/: cnn_layers.py  layers.py  loss_functions.py  network.py
tests/: test_activation_functions.py  test_cnn.py  test_integration.py  test_loss_functions.py
